if DO_PYTHON
pythondir = python
endif

if DO_PERL
perldir = perl
endif

if DO_DOAT
doatdir = doat
endif

if DO_ZNC
zncdir = znc
endif

if DO_FISHLIM
fishlimdir = fishlim
endif

if DO_CHECKSUM
checksumdir = checksum
endif

if DO_SYSINFO
sysinfodir = sysinfo
endif

SUBDIRS = $(pythondir) $(perldir) $(checksumdir) $(doatdir) $(fishlimdir) $(sysinfodir) $(zncdir)
