if DO_LUA
lua = lua
endif

if DO_PYTHON
pythondir = python
endif

if DO_PERL
perldir = perl
endif

if DO_FISHLIM
fishlimdir = fishlim
endif

if DO_CHECKSUM
checksumdir = checksum
endif

if DO_SYSINFO
sysinfodir = sysinfo
endif

SUBDIRS = $(lua) $(pythondir) $(perldir) $(checksumdir) $(fishlimdir) $(sysinfodir)
